hw_03/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms1-svc
  labels:
    app: ms1
    owner: artem_voropay
    description: otus_hw3
spec:
  selector:
    app: ms1
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
